fix: reduce body font size on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,7 +57,7 @@
 
   body,
   .p {
-    @apply text-base;
+    @apply text-sm sm:text-base;
   }
   /* #endregion  /**======== Typography =========== */
 
@@ -72,7 +72,7 @@
 
 /* #region  /**=========== Photoswipe =========== */
 .pswp__lightbox-caption {
-  @apply absolute bottom-[12px] left-1/2 z-10 flex w-11/12 -translate-x-1/2 items-center justify-center rounded-2xl bg-neutral-800/90 px-4 py-2 text-left text-sm text-gray-100 sm:text-center sm:text-base md:w-8/12 lg:w-7/12;
+  @apply absolute bottom-[12px] left-1/2 z-10 flex w-11/12 -translate-x-1/2 items-center justify-center rounded-2xl bg-neutral-800/90 px-4 py-2 text-left text-gray-100 sm:text-center md:w-8/12 lg:w-7/12;
 }
 
 .pswp__lightbox-caption a {
